--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "prettier": "^3.3.2",
+    "prettier-eslint": "^16.3.0",
     "style-dictionary": "^3.9.2",
-    "typescript": "^5.2.2",
+    "typescript": "^4.9.5",
     "vite": "^5.2.0"
   }
 }
