--- a/config.json
+++ b/config.json
@@ -1,14 +1,18 @@
 {
-    "source": ["tokens/**/*.json"],
-    "platforms": {
-      "scss": {
-        "transformGroup": "css",
-        "prefix": "sd",
-        "buildPath": "build/css/",
-        "files": [{
+  "source": ["tokens/**/*.json"],
+  "platforms": {
+    "css": {
+      "transformGroup": "css",
+      "buildPath": "build/css/",
+      "files": [
+        {
           "destination": "_variables.css",
           "format": "css/variables"
-        }]
+        }
+      ],
+      "options": {
+        "outputReferences": true
       }
     }
   }
+}
